# Apptopia

./: .gitignore  AGENTS.md  README.md
.github/ISSUE_TEMPLATE/: app-game.yml  app-tool.yml
.github/aw/: actions-lock.json
.github/workflows/: README.md  ci_6.yml  ci_8.yml  ci_example.yml.template  codex-issue-implementing.yml  codex-issue-planning.yml  issue-auto-labeler.lock.yml  issue-auto-labeler.md
apps/: README.md
apps/example/: README.md
apps/issue-2/: pyproject.toml  requirements-dev.txt
apps/issue-2/src/pixel_render/: cli.py
apps/issue-27/: README.md
apps/issue-27/src/: bot.ts  index.ts  types.ts
apps/issue-27/src/queue/: jobQueue.ts
apps/issue-27/src/storage/: dataStore.ts
apps/issue-27/src/utils/: exec.ts
apps/issue-3/: requirements.txt
apps/issue-3/src/backend/core/: processor.py
apps/issue-3/src/backend/rag/: query_processor.py
apps/issue-3/tests/: test_processor.py
apps/issue-6/: .mdlinkcheckrc.example  GITHUB_ACTIONS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/issue-6/src/mdlinkcheck/: __init__.py  checker.py  cli.py  config.py  reporter.py  scanner.py
apps/issue-6/tests/: test_mdlinkcheck.py
apps/issue-8/backend/: go.mod  main.go
apps/issue-8/frontend/src/app/: app.spec.ts
docs/: deno-sandbox-codex-snapshot-azure.md
docs/templates/: codex.azure.example.toml
tasks/: todo.md
